# cookiecutter-octoprint-plugin

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
{{cookiecutter.repo_name}}/extra/: README.txt
{{cookiecutter.repo_name}}/extras/: README.txt  {{cookiecutter.plugin_identifier}}.md
{{cookiecutter.repo_name}}/extras/github/: bug_report.yml
{{cookiecutter.repo_name}}/octoprint_{{cookiecutter.plugin_identifier}}/: __init__.py
{{cookiecutter.repo_name}}/octoprint_{{cookiecutter.plugin_identifier}}/static/less/: README.txt
{{cookiecutter.repo_name}}/octoprint_{{cookiecutter.plugin_identifier}}/translations/: README.txt
{{cookiecutter.repo_name}}/translations/: README.txt
{{cookiecutter.repo_name}}/{{cookiecutter.plugin_package}}/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.plugin_package}}/static/js/: {{cookiecutter.plugin_identifier}}.js
